<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>1.1</groupId>
  <artifactId>KafkaProducerSample</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>KafkaProducerSample</name>
  
  <dependencies>
  	<dependency>
  <groupId>log4j</groupId>
  <artifactId>log4j</artifactId>
  <version>1.2.16</version>
</dependency>
    <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>1.6.1</version>
        </dependency>
        <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>jcl-over-slf4j</artifactId>
                <version>1.6.1</version>
        </dependency>
        <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-log4j12</artifactId>
                <version>1.6.1</version>
        </dependency>
        <dependency>
			<groupId>org.apache.kafka</groupId>
			<artifactId>kafka-clients</artifactId>
			<version>1.1.1</version>
		</dependency>
		<dependency>
	      <groupId>io.dropwizard.metrics</groupId>
	      <artifactId>metrics-core</artifactId>
	      <version>3.1.0</version>
   	    </dependency>
   	     <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>19.0</version>
    </dependency>
         
  </dependencies>
  <build>
 <resources>
        <resource>
            <directory>src/main/resources</directory>
            <targetPath>${project.build.directory}</targetPath>
            <includes>
                <include>Log4j.xml</include>
            </includes>
        </resource>
    </resources>
  <plugins>
    <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-shade-plugin</artifactId>
		        <version>2.4.3</version>
		        <executions>
		          <execution>
		            <phase>package</phase>
		            <goals>
		              <goal>shade</goal>
		            </goals>
		            <configuration>
		              <transformers>
		                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
		                 <mainClass>kafka.examples.KafkaProducerSample</mainClass>
		                <manifestEntries>	             	  
		             	   <Class-Path>.</Class-Path>
		                </manifestEntries>		                  
		                </transformer>
		              </transformers>
		            </configuration>
		          </execution>
		        </executions>
		      </plugin>
  </plugins>
  </build>
</project>